src/components/Card/styles.module.css
.card {
  display: flex;
  justify-content: center;
  align-items: center;
  flex-direction: column;
  border-radius: 4px;
  transition: transform 0.5s ease, box-shadow 0.5s ease;
  overflow: hidden;
  word-wrap: break-word;
  white-space: pre-wrap;
}

.card-hover-enabled:hover {
  transform: scale(1.01);
}

.cardTitle {
  font-weight: 700;
  padding-top: 1rem;
  /* font-size: 2rem; */
  font-size: clamp(1.5rem, 4vw, 2rem);
}

.cardContent {
  text-align: center;
  padding: 0.5rem 1rem;
  margin-top: 0;
  font-size: clamp(0.875rem, 2.5vw, 1rem);
}

/* Filled cards */
.card-filled {
  width: 18.75rem;
  max-width: 25rem;
  height: auto;
  min-height: 25rem;
}

.card-filled.card-primary {
  background-color: var(--primary);
  color: var(--text-secondary);
}

.card-filled.card-secondary {
  background-color: var(--secondary);
  color: var(--text-secondary);
}

.card-filled.card-tertiary {
  background-color: var(--tertiary);
  color: var(--text-secondary);
}

/* Outline cards */
.card-outline {
  width: 18.75rem;
  max-width: 25rem;
  height: auto;
  min-height: 25rem;
}

.card-outline.card-primary {
  background-color: transparent;
  border: 3px solid var(--primary);
  color: var(--text-primary);
}

.card-outline.card-secondary {
  background-color: transparent;
  border: 3px solid var(--secondary);
  color: var(--text-primary);
}

.card-outline.card-tertiary {
  background-color: transparent;
  border: 3px solid var(--tertiary);
  color: var(--text-primary);
}

/* Wide cards */
.card-wide {
  width: 25rem;
  height: auto;
  min-height: 9.375rem;
}

.card-wide.card-primary {
  background-color: var(--primary);
  color: var(--text-secondary);
}

.card-wide.card-secondary {
  background-color: var(--secondary);
  color: var(--text-secondary);
}

.card-wide.card-tertiary {
  background-color: var(--tertiary);
  color: var(--text-secondary);
}

/* Image cards */
.card-with-image {
  display: flex;
  flex-direction: column;
  border: 3px solid var(--primary);
  background-color: var(--primary);
  color: var(--text-secondary);
  width: 18.75rem;
}

.cardImageContainer {
  position: relative;
  width: 100%;
  overflow: hidden;
  padding: 0;
  margin: 0;
}

.cardImage {
  width: 100%;
  height: auto;
  object-fit: cover;
  display: block;
}

/* Image transition cards */

.card-with-image-transition {
  width: 100%;
  /* max-width: 25rem; */
  min-width: 20rem;
  height: 15rem;
  border: 3px solid var(--primary);
  overflow: hidden;
  position: relative;
}

.card-with-image-transition:active {
  transform: translate(2rem, -2rem);
}

.cardImageContainerFull {
  width: 100%;
  height: 100%;
  overflow: hidden;
  display: flex;
  justify-content: center;
  align-items: center;
  transition: opacity 0.4s ease;
  position: absolute;
  top: 0;
  left: 0;
  z-index: 1;
  opacity: 1;
}

.cardImageContainerFull img {
  width: 100%;
  height: 100%;
  object-fit: cover;
  display: block;
}

.contentOverImage {
  width: 100%;
  height: 100%;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  text-align: center;
  transition: opacity 1s ease, transform 1s ease;
  position: absolute;
  background-color: var(--primary);
  color: var(--text-secondary);
  opacity: 0;
  z-index: 2;
}

.card-with-image-transition:hover .cardImageContainerFull {
  opacity: 0;
}

.card-with-image-transition:hover .contentOverImage {
  opacity: 1;
  transform: translateY(0);
  cursor: pointer;
}

/* Devices */

@media (max-width: 768px) {
  /* Let the card fill its container (or near full width) on mobile */
  .card-filled,
  .card-outline,
  .card-wide,
  .card-with-image,
  .card-with-image-transition {
    width: 90%;
    /* max-width: 28rem;  */
    min-height: auto;
  }
}

@media (min-width: 1024px) {
}

